[package]
name    = "nphysics-examples-2d"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[dependencies]
rand       = "0.5"
alga       = "0.7"
nalgebra   = "0.16"
ncollide2d = "0.17"
nphysics2d = "0.9.2"
nphysics_testbed2d = "0.2.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0"
downcast = "0.9.2"

[[bin]]
name = "multibody_limits2"
path = "./multibody_limits2.rs"
